Refactoring to interfaces, cleaning up generics warnings